apps/taskapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskapp
  template:
    metadata:
      labels:
        app: taskapp
    spec:
      containers:
      - name: taskapp
        image: ghcr.io/bhts-quadops/taskapp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
