apps/taskapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskapp
spec:
  selector:
    app: taskapp
  ports:
    - port: 80
      targetPort: 8080
