apps/taskapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: taskapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taskapp
                port:
                  number: 80
